# discord-agent

./: .env.example  .gitignore  LICENSE  README.ja.md  README.md  bot.py  context_manager.py  cron_parser.py  db.py  discord-agent.service  mcp_manager.py  mcp_servers.example.json  pyproject.toml  requirements.txt  skills_manager.py  tools.py  tools_codegen.py  tools_http.py  tools_permissions.py  tools_skills.py  tools_system.py  tools_vision.py  tools_web.py
cogs/: agent.py  collector.py  scheduler.py
docs/: best-practices-report-2025.md  mcp-research.md  research-autonomous-scheduled-tasks-2025.md  research-web-search-capabilities.md  research-web-tools-best-practices-2025.md
docs/research/: ai-agent-memory-best-practices-2025.md
skills/: data_analysis.md  image_generation.md  remotion_video.md  translation.md
skills/cloudflare-deploy/: SKILL.md
skills/data-analysis/: SKILL.md
skills/image-generation/: SKILL.md
skills/remotion-video/: SKILL.md
skills/translation/: SKILL.md
